force-app/main/default/objects/ProjectAttribute__c/ProjectAttribute__c.object-meta.xml
<CustomObject>
    <label>Project Attribute</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Project Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>