force-app/main/default/objects/ProjectAttribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Project Attributes</relationshipLabel>
    <relationshipName>Project_Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>