force-app/main/default/objects/ProjectAttribute__c/fields/AttributeDefinedResponse__c.field-meta.xml
<CustomField>
    <fullName>AttributeDefinedResponse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Defined Response</label>
    <referenceTo>AttributeDefinedResponse__c</referenceTo>
    <relationshipLabel>Project Attributes</relationshipLabel>
    <relationshipName>Project_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>