force-app/main/default/objects/ProjectAttribute__c/fields/AttributeDefinedResponseValue__c.field-meta.xml
<CustomField>
    <fullName>AttributeDefinedResponseValue__c</fullName>
    <formula>AttributeDefinedResponse__r.Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Defined Response Value</label>
    <type>Text</type>
</CustomField>