force-app/main/default/objects/ProjectAttribute__c/fields/AttributeDescription__c.field-meta.xml
<CustomField>
    <fullName>AttributeDescription__c</fullName>
    <formula>Attribute__r.Description__c</formula>
    <label>AttributeDescription</label>
    <type>Text</type>
</CustomField>