force-app/main/default/objects/ProjectAttribute__c/fields/AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>AttributeValue__c</fullName>
    <label>AttributeValue</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>