force-app/main/default/objects/ProjectAttribute__c/fields/IsRequired__c.field-meta.xml
<CustomField>
    <fullName>IsRequired__c</fullName>
    <formula>ProjectTypeAttribute__r.IsRequired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsRequired</label>
    <type>Checkbox</type>
</CustomField>