force-app/main/default/objects/ProjectAttribute__c/fields/ProjectTypeAttribute__c.field-meta.xml
<CustomField>
    <fullName>ProjectTypeAttribute__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Type attribute</label>
    <referenceTo>ProjectTypeAttribute__c</referenceTo>
    <relationshipLabel>Project Attributes</relationshipLabel>
    <relationshipName>Project_Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>